test/e2e/app-dir/app/app/error/global-error-boundary/server/page.js
export default function Page() {
  const e = new Error('this is a test')
  e.digest = 'CUSTOM_DIGEST_SERVER'
  throw e
}
